<resources>
    <string name="app_name">CookingQuest</string>
    <string name="cookingquest">CookingQuest</string>
    <string name="recetas"> Recetas Europeas </string>
    <string name="salir">SALIR</string>
    <string name="emparejalos">EMPAREJALOS</string>
    <string name="adivina">ADIVINA</string>
    <string name="inicio1">INICIO</string>
    <string name="cocina_y_juega">¡Cocina y Juega!</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="info_juego_adivina">¿Qué Receta es?</string>
    <string name="nombreFrancia">Francia</string>
    <string name="nombreRecetaFrancia1">Ratatouille</string>
    <string name="nombreRecetaFrancia2">Bouillabaisse</string>
    <string name="nombreRecetaFrancia3">Croissant</string>
    <string name="nombreRecetaFrancia4">Coq au Vin</string>
    <string name="nombreRecetaFrancia5">Quiche Lorraine</string>
    <string name="nombreSpain">España</string>
    <string name="nombreRecetaSpain1">Torrijas con Miel</string>
    <string name="nombreRecetaSpain2">Judias Pintas</string>
    <string name="nombreRecetaSpain3">Tarta de Manzana</string>
    <string name="nombreRecetaSpain4">Ensaladilla Rusa</string>
    <string name="nombreRecetaSpain5">Patatas con Alioli</string>
    <string name="nombreAlemania">Alemania</string>
    <string name="nombreRecetaAlemania1">Sauerkraut</string>
    <string name="nombreRecetaAlemania2">Schnitzel</string>
    <string name="nombreRecetaAlemania3">Bratkartoffeln</string>
    <string name="nombreRecetaAlemania4">Salchichas Bratwurst</string>
    <string name="nombreRecetaAlemania5">Kartoffelsalat</string>
    <string name="nombreInglaterra">Inglaterra</string>
    <string name="nombreRecetaInglaterra1">Fish and Chips</string>
    <string name="nombreRecetaInglaterra2">Rosbif con pudin Yorkshire</string>
    <string name="nombreRecetaInglaterra3">Bangers and Mash</string>
    <string name="nombreRecetaInglaterra4">Full English Breakfast</string>
    <string name="nombreRecetaInglaterra5">Shephered´s pie</string>
    <string name="inicio">INICIO</string>
    <string name="volver">VOLVER</string>
    <string name="CATEGORIA">Categoria:</string>
    <string name="rs_categoria_sp1">Postres</string>
    <string name="rs_categoria_sp2">Guisos</string>
    <string name="rs_categoria_sp3">Postres</string>
    <string name="rs_categoria_sp4">Guisos</string>
    <string name="rs_categoria_sp5">Postres</string>
    <string name="rs_categoria_fr1">A la Plancha</string>
    <string name="rs_categoria_fr2">Guisos</string>
    <string name="rs_categoria_fr3">Al Horno</string>
    <string name="rs_categoria_fr4">Guisos</string>
    <string name="rs_categoria_fr5">Al Horno</string>
    <string name="rs_categoria_al1">Guisos</string>
    <string name="rs_categoria_al2">Fritos</string>
    <string name="rs_categoria_al3">A la Plancha</string>
    <string name="rs_categoria_al4">Fritos</string>
    <string name="rs_categoria_al5">A la Plancha</string>
    <string name="rs_categoria_ing1">Fritos</string>
    <string name="rs_categoria_ing2">A la Plancha</string>
    <string name="rs_categoria_ing3">Fritos</string>
    <string name="rs_categoria_ing4">A la Plancha</string>
    <string name="rs_categoria_ing5">Fritos</string>
    <string name="TIEMPO">Tiempo:</string>
    <string name="rs_tiempo_sp1">1 hora</string>
    <string name="rs_tiempo_sp2">2 horas</string>
    <string name="rs_tiempo_sp3">2 horas</string>
    <string name="rs_tiempo_sp4">2 horas</string>
    <string name="rs_tiempo_sp5">2 horas</string>
    <string name="rs_tiempo_fr1">2 horas</string>
    <string name="rs_tiempo_fr2">2 horas</string>
    <string name="rs_tiempo_fr3">1 hora</string>
    <string name="rs_tiempo_fr4">2 horas</string>
    <string name="rs_tiempo_fr5">1 hora</string>
    <string name="rs_tiempo_al1">30 mins</string>
    <string name="rs_tiempo_al2">1,5 horas</string>
    <string name="rs_tiempo_al3">2 horas</string>
    <string name="rs_tiempo_al4">1,5 horas</string>
    <string name="rs_tiempo_al5">2 horas</string>
    <string name="rs_tiempo_ing1">45 mins</string>
    <string name="rs_tiempo_ing2">1,15 horas</string>
    <string name="rs_tiempo_ing3">1,5 horas</string>
    <string name="rs_tiempo_ing4">1,15 horas</string>
    <string name="rs_tiempo_ing5">1,5 horas</string>
    <string name="RACIONES">Raciones:</string>
    <string name="rs_raciones_sp1">4 p</string>
    <string name="rs_raciones_sp2">4 p</string>
    <string name="rs_raciones_sp3">4 p</string>
    <string name="rs_raciones_sp4">4 p</string>
    <string name="rs_raciones_sp5">4 p</string>
    <string name="rs_raciones_fr1">4 p</string>
    <string name="rs_raciones_fr2">4 p</string>
    <string name="rs_raciones_fr3">6 p</string>
    <string name="rs_raciones_fr4">4 p</string>
    <string name="rs_raciones_fr5">6 p</string>
    <string name="rs_raciones_al1">4 p</string>
    <string name="rs_raciones_al2">6 p</string>
    <string name="rs_raciones_al3">4 p</string>
    <string name="rs_raciones_al4">6 p</string>
    <string name="rs_raciones_al5">4 p</string>
    <string name="rs_raciones_ing1">2 p</string>
    <string name="rs_raciones_ing2">4 p</string>
    <string name="rs_raciones_ing3">6 p</string>
    <string name="rs_raciones_ing4">4 p</string>
    <string name="rs_raciones_ing5">6 p</string>
    <string name="rs_boton1_Alemania">Alemania_boton1</string>
    <string name="rs_boton2_Alemania">Alemania_boton2</string>
    <string name="rs_boton3_Alemania">Alemania_boton3</string>
    <string name="rs_boton4_Alemania">Alemania_boton4</string>
    <string name="rs_boton5_Alemania">Alemania_boton5</string>
    <string name="rs_boton1_Inglaterra">Inglaterra_boton1</string>
    <string name="rs_boton2_Inglaterra">Inglaterra_boton2</string>
    <string name="rs_boton3_Inglaterra">Inglaterra_boton3</string>
    <string name="rs_boton4_Inglaterra">Inglaterra_boton4</string>
    <string name="rs_boton5_Inglaterra">Inglaterra_boton5</string>
    <string name="rs_boton1_España">España_boton1</string>
    <string name="rs_boton2_España">España_boton2</string>
    <string name="rs_boton3_España">España_boton3</string>
    <string name="rs_boton4_España">España_boton4</string>
    <string name="rs_boton5_España">España_boton5</string>
    <string name="rs_boton1_Francia">Francia_boton1</string>
    <string name="rs_boton2_Francia">Francia_boton2</string>
    <string name="rs_boton3_Francia">Francia_boton3</string>
    <string name="rs_boton4_Francia">Francia_boton4</string>
    <string name="rs_boton5_Francia">Francia_boton5</string>
    <string name="rs_nombre_receta">Nombre de la receta</string>
    <string name="rs_categoria_receta">Barbacoa</string>
    <string name="rs_contenido_ingredientes"><p> * 6 Bratwurst(salchichas alemana)
            \n * 1 cebolla grande cortada en rodajas
            \n * 2 cucharadas de aceite vegetal
            \n * 1 taza de cerveza alemana
            \n * mostaza alemana (opcional)
            \n * panecillos de hamburguesa
            \n * condimentos y guarniciones al gusto (como sauerkraut,
            \n * pepinillos, cebolla caramelizada).</p></string>
    <string name="rs_textoDelLink">Link de preparación:</string>
    <string name="rs_link_salchichas">sas</string>
    <string name="rs_nombreFrancia">Francia</string>
    <string name="rs_nombreRecetaFrancia1">Ratatouille</string>
    <string name="rs_ingredientes_fr1"><p> * 500g de Berenjena
        \n * 375g de Calabacín
        \n * 125ml Aceite de oliva virgen extra
        \n * 2 Cebollas
        \n * 1 Pimiento Rojo
        \n * 5 Dientes de ajo
        \n * 750g de Tomate
        \n * Perejil fresco picado al gusto
        \n * Tomillo fresco al gusto
        \n * Albahaca al gusto
        \n * Sal
        \n * Pimienta negra molida</p>
    <p>Preparación de Ingredientes:</p>\n
    Corta 2 pechugas de pollo en tiras finas.\n
    Pela y corta un aguacate maduro en cubos.\n
    Lava y corta en rodajas finas 1 tomate.\n
    Pela y corta en rodajas finas 1 pepino.\n\n

    <p>Cocción del Pollo:</p>\n
    Calienta una sartén a fuego medio.\n
    Cocina las tiras de pollo hasta que estén doradas.\n\n

    <p>Preparación de la Vinagreta:</p>\n
    En un tazón pequeño, mezcla 3 cucharadas de aceite de oliva, 2 cucharadas de vinagre balsámico, sal y pimienta al gusto.\n\n

    <p>Ensamblaje de la Ensalada:</p>\n
    En un plato grande, coloca una cama de hojas de lechuga fresca.\n
    Distribuye las tiras de pollo cocidas sobre las hojas de lechuga.\n
    Añade los cubos de aguacate, las rodajas de tomate y pepino.\n\n

    <p>Aderezo y Servir:</p>\n
    Rocía la vinagreta sobre la ensalada.\n
    Opcional: Espolvorea con queso rallado o semillas de girasol para darle un toque adicional.\n
    Sirve inmediatamente y disfruta de una ensalada fresca y deliciosa.\n</string>
    <string name="rs_textoDelLink_fr1">Link de preparación: <a href="www.google.com">Haz click aquí para ver el video</a> </string>
    <string name="rs_link_fr1">https://www.youtube.com/watch?v=Dpbq9b4bWdI</string>
    <string name="rs_nombreRecetaFrancia2">Bouillabaisse</string>
    <string name="rs_ingredientes_fr2"><p> * 1kg de Pescado blanco variado
        \n * 100g de Langostinos
        \n * 200g de Mejillones
        \n * 1 Puerro
        \n * 1 Cebolla
        \n * 3 Dientes de ajo
        \n * 4 Tomates
        \n * 1 Hoja de laurel
        \n * 3 cucharadas de Aceite de Oliva Extra Virgen
        \n * Hinojo Fresco en trocito
        \n * Sal y pimienta al gusto
        \n * Pan duro en rebanadas finas
        \n * Unas hebras de Azafrán</p>
    <p>Preparación de Ingredientes:</p>\n
    Corta 2 pechugas de pollo en tiras finas.\n
    Pela y corta un aguacate maduro en cubos.\n
    Lava y corta en rodajas finas 1 tomate.\n
    Pela y corta en rodajas finas 1 pepino.\n\n

    <p>Cocción del Pollo:</p>\n
    Calienta una sartén a fuego medio con un poco de aceite.\n
    Cocina las tiras de pollo hasta que estén doradas y completamente cocidas.\n\n

    <p>Preparación de la Vinagreta:</p>\n
    En un tazón pequeño, mezcla 3 cucharadas de aceite de oliva, 2 cucharadas de vinagre balsámico, sal y pimienta al gusto.\n\n

    <p>Ensamblaje de la Ensalada:</p>\n
    En un plato grande, coloca una cama de hojas de lechuga fresca.\n
    Distribuye las tiras de pollo cocidas sobre las hojas de lechuga.\n
    Añade los cubos de aguacate, las rodajas de tomate y pepino.\n\n

    <p>Aderezo y Servir:</p>\n
    Rocía la vinagreta sobre la ensalada.\n
    Opcional: Espolvorea con queso rallado o semillas de girasol para darle un toque adicional.\n
    Sirve inmediatamente y disfruta de una ensalada fresca y deliciosa.\n</string>
    <string name="rs_textoDelLink_fr2">Link de preparación: <a>Haz click aquí para ver el video</a> </string>
    <string name="nombre">Nombre</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="introduce_un_nombre">Introduce un Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="introduce_un_correo">Introduce un Correo</string>
    <string name="contrasenia">Contraseña</string>
    <string name="introduce_contrase_a">Introduce Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="confirma_contrase_a">Confirma Contraseña</string>
    <string name="introduce_su_telefono">Introduce su telefono</string>
    <string name="telefono">Telefono</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="tiempo_de_ejecuci_n">Tiempo de Ejecución</string>
    <string name="categoria">Categoria:</string>
    <string name="preparacion_1_parte">Preparacion 1ª Parte</string>
    <string name="preparacion_2_parte">Preparacion 2ª Parte</string>
    <string name="preparacion_3_parte">Preparacion 3ª Parte</string>
    <string name="preparacion_4_parte">Preparacion 4ª Parte</string>
</resources>