<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecetaPrincipalActivity">

    <ImageView
        android:id="@+id/rs_imagenreceta"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:scaleType="centerCrop"
        android:src="@drawable/comida_alemania_r3" />

    <TextView
        android:id="@+id/rs_text_nombreReceta"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rs_imagenreceta"
        android:background="@color/Secundario_color"
        android:gravity="center"
        android:text="@string/rs_nombre_receta"
        android:textSize="25dp" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rs_text_nombreReceta"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rs_Idioma"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="Pulsa cambio de idioma"
                    android:textSize="@dimen/text_size" />


                <Button
                    android:id="@+id/translateButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="@drawable/icons_england"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rs_Categoria"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/categoria"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/rs_textCategoria"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/rs_categoria_receta"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/RSTextEjecucion"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/tiempo_de_ejecuci_n"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/rs_textTiempo"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/rs_tiempo_sp1"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playPauseButton1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/Secundario_color"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:onClick="onClickPlayPause" />

                <TextView
                    android:id="@+id/RSTextIngredientes"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/ingredientes"
                    android:textSize="20sp" />

            </LinearLayout>



            <TextView
                android:id="@+id/rs_ingredientesContent"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/rs_contenido_ingredientes"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playPauseButton2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/Secundario_color"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:onClick="onClickPlayPause" />

                <TextView
                    android:id="@+id/RSTextPreparacion1"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/preparacion_1_parte"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/rs_preparacion_1"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/rs_contenido_ingredientes"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playPauseButton3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/Secundario_color"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:onClick="onClickPlayPause" />

                <TextView
                    android:id="@+id/RSTextPreparacion2"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/preparacion_2_parte"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/rs_preparacion_2"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/rs_contenido_ingredientes"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playPauseButton4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/Secundario_color"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:onClick="onClickPlayPause" />

                <TextView
                    android:id="@+id/RSTextPreparacion3"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/preparacion_3_parte"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/rs_preparacion_3"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/rs_contenido_ingredientes"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playPauseButton5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/Secundario_color"
                    android:drawableLeft="@android:drawable/ic_media_play"
                    android:onClick="onClickPlayPause" />

                <TextView
                    android:id="@+id/RSTextPreparacion4"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_regular"
                    android:text="@string/preparacion_4_parte"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/rs_preparacion_4"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/rs_contenido_ingredientes"
                android:textSize="@dimen/text_size" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/img_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/rojo"
        app:srcCompat="@drawable/ic_img_link" />

    <ImageButton
        android:id="@+id/estrella_OFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageButton
        android:id="@+id/estrella_ON"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on" />



</RelativeLayout>